--- a/source/_posts/657.md
+++ b/source/_posts/657.md
@@ -8,8 +8,8 @@ tags:
 
 [Leetcode 657. Judge Route Circle](https://leetcode.com/problems/judge-route-circle/description/)
 
-题目大意是有个机器人从（0，0）位置出发，判断它的行动轨迹是否是一个圈，也是就它最终是否*回到原点*。
-它的移动轨迹用一个字符串来描述，每个字符表示往一个方向移动了一段固定距离，可能的字符以及方向是：L (左)， R (右)， U (上)， D (下)。
+题目大意是有个机器人从（0，0）位置出发，每次会上下左右选一个方向移动 1 步，我们要判断它最终是否*回到原点*。
+它的移动轨迹用一个字符串来描述，每个字符表示往一个方向移动了一步，可能的字符以及方向是：L (左)， R (右)， U (上)， D (下)。
 
 示例1：
 ```
