--- a/source/_posts/617.md
+++ b/source/_posts/617.md
@@ -1,7 +1,10 @@
 ---
 title: Scala 大战 Leetcode – Leetcode 617
 date: 2018-01-04 18:43:08
+categories:
+- 算法
 tags:
+- Tree
 ---
 
 
@@ -25,6 +28,8 @@ Merged tree:
 	  / \   \ 
 	 5   4   7
 ```
+
+<!-- more -->
 
 题目中还特意指出需要从树的根节点开始合并。我感觉这句话与其说是个限制还不如说是个提示，我们知道二叉树由于它自身的特性，大部分的操作都可以使用递归的方法来实现。这个题目也不例外。根据从根节点开始的提示，我们可以使用先序遍历（preorder traversal）。
 下面是我的实现
