--- a/source/_posts/653.md
+++ b/source/_posts/653.md
@@ -1,7 +1,10 @@
 ---
 title: Scala 大战 Leetcode - Leetcode 653
 date: 2018-01-07 15:26:40
+categories:
+- 算法
 tags:
+- Tree
 ---
 
 [653. Two Sum IV - Input is a BST](https://leetcode.com/problems/two-sum-iv-input-is-a-bst/description/)
@@ -34,6 +37,8 @@ Target = 28
 
 Output: False
 ```
+
+<!--more-->
 
 最单纯的想法是使用一个集合保存树的节点值，遍历这棵树，每碰到一个节点 x，就看一下这个集合里是否存在和 x 相加成为目标值 k 的那个值，具体地就是查看集合是否存在 k - x 这个值。
 这个想法还是比较好实现的：
