--- a/source/_posts/657.md
+++ b/source/_posts/657.md
@@ -1,7 +1,10 @@
 ---
 title: Scala 大战 Leetcode – Leetcode 657
 date: 2018-01-04 15:17:48
+categories:
+- 算法
 tags:
+- String
 ---
 
 
@@ -21,6 +24,8 @@ Output: true
 Input: "LL"
 Output: false
 ```
+
+<!--more-->
 
 这个题目一开始给我的感觉是很适合用栈，但是再转念一想其实不需要这么麻烦，只要统计上下的次数以及左右的次数是否相同就可以了。本质上的思路是跟使用栈一样的，但是在这个题目里我们只需要使用两个变量来分别记录上和下的次数以及左和右的次数。
 下面是代码：
