--- a/source/_posts/687.md
+++ b/source/_posts/687.md
@@ -1,7 +1,11 @@
 ---
 title: Scala 大战 Leetcode – Leetcode 687
 date: 2018-02-10 17:16:50
+categories:
+- 算法
 tags:
+- Tree
+- Recursion
 ---
 
 [687. Longest Univalue Path](https://leetcode.com/problems/longest-univalue-path/description/)
@@ -31,6 +35,8 @@ Input:
 ```
 Output:
 `2`
+
+<!--more-->
 
 第一个例子可以看到根节点和右子树组成的3个5拥有最长相同值路径，第一个 5 和最后一个 5 之间一共有 2 条边，所以是 2。第二个例子左边的 3 个 4 构成了最长相同值路径，这条路径从最左下角的4开始，经过父节点的那个 4，到达右边的 4，所以长度也是 2。
 
