--- a/source/_posts/775.md
+++ b/source/_posts/775.md
@@ -1,7 +1,11 @@
 ---
 title: Scala 大战 Leetcode – Leetcode 775
 date: 2018-02-18 13:31:36
+categories:
+- 算法
 tags:
+- Array
+- Math
 ---
 
 [775. Global and Local Inversions](https://leetcode.com/problems/global-and-local-inversions/description/)
@@ -30,6 +34,9 @@ Explanation: There are 2 global inversions, and 1 local inversion.
 1. A 是 `[0, 1, ..., A.length - 1]` 这样一个数组的任意排列。
 2. A 的长度在 `[1, 5000]` 之间。
 3. 这道题的运行时间限制被缩短了。
+
+
+<!--more-->
 
 首先理解一下题目里所谓的全局倒置以及本地倒置。假设 `[0, 1, ..., N - 1]` 这个数组是最原始的正确排列，因为这个数组里面所有后面的数都比前面的大，那么在其他的可能的排列里面，只要有一个后面的数比前面的小，就是一个全局倒置。
 本地倒置的话是对于相邻的两个数来说，只要后面的数比前面的小，就是本地倒置。因此不难发现其实本地倒置也是一个全局倒置，所以我们只需要判断是否这个 A 里面所有的倒置都是本地倒置即可。或者说只要有一个不是本地倒置的全局倒置，那我们就返回 false。
